fix(layer_side_panel): prevent overflow of flex elements

--- a/src/neuroglancer/ui/default_viewer.css
+++ b/src/neuroglancer/ui/default_viewer.css
@@ -14,6 +14,11 @@
  * limitations under the License.
  */
 
+* {
+  min-width: 0px;
+  min-height: 0px;
+}
+
 html, body {
   margin: 0px;
   padding: 0px;
